--- a/src/common/sidebar.css
+++ b/src/common/sidebar.css
@@ -25,7 +25,10 @@ paper-icon-item::before {
 	left: 0 !important;
 	right: 0 !important;
 	opacity: 1 !important;
-	background: var(--accent-color) !important;
+	background: var(
+		--md-sys-color-secondary-container,
+		var(--accent-color)
+	) !important;
 	border-radius: 128px !important;
 	transform: scaleX(0);
 }
